--- a/docker-compose/main-server.yaml
+++ b/docker-compose/main-server.yaml
@@ -1,9 +1,40 @@
 version: "3"
 services:
-  main-reverse-proxy:
-    image: traefik
+  # main-reverse-proxy:
+  #   image: traefik
+  #   ports:
+  #     - 443:443
+  #   volumes:
+  #     - ../main-reverse-proxy/traefik.yaml:/traefik.yaml
+  #     - ../main-reverse-proxy/conf:/traefik/conf
+
+  # Microservices
+  ms-ingredient:
+    build: ../microservices/ms-ingredient/php
     ports:
-      - 443:443
+      - "443:443"
     volumes:
-      - ../main-reverse-proxy/traefik.yaml:/traefik.yaml
-      - ../main-reverse-proxy/conf:/traefik/conf
+      - ../microservices/ms-ingredient/php/vhosts:/etc/apache2/sites-enabled
+      - ../microservices/ms-ingredient/:/var/www
+      - ../microservices/ms-ingredient/php/ssl:/etc/ssl
+    restart: always
+  
+  ms-modele:
+    build: ../microservices/ms-modele/php
+    ports:
+      - "444:443"
+    volumes:
+      - ../microservices/ms-modele/php/vhosts:/etc/apache2/sites-enabled
+      - ../microservices/ms-modele/:/var/www
+      - ../microservices/ms-modele/php/ssl:/etc/ssl
+    restart: always
+  
+  ms-procede:
+    build: ../microservices/ms-procede/php
+    ports:
+      - "446:443"
+    volumes:
+      - ../microservices/ms-procede/php/vhosts:/etc/apache2/sites-enabled
+      - ../microservices/ms-procede/:/var/www
+      - ../microservices/ms-procede/php/ssl:/etc/ssl
+    restart: always
