--- a/microservices/ms-procede/php/vhosts/vhosts.conf
+++ b/microservices/ms-procede/php/vhosts/vhosts.conf
@@ -28,8 +28,8 @@
     CustomLog /var/log/apache2/project_access.log combined
 
     SSLEngine on
-    SSLCertificateFile /etc/ssl/ms-modele-certificate.crt
-    SSLCertificateKeyFile /etc/ssl/ms-modele.key
+    SSLCertificateFile /etc/ssl/ms-procede-certificate.crt
+    SSLCertificateKeyFile /etc/ssl/ms-procede.key
  
     # optionally set the value of the environment variables used in the application
     #SetEnv APP_ENV prod
