--- a/docker-compose/secondary-server.yaml
+++ b/docker-compose/secondary-server.yaml
@@ -1,2 +1,31 @@
 version: "3"
 services:
+  ms-gateway:
+    build: ../ms-gateway
+    ports:
+      - 443:443
+
+  # Microservices
+  ms-ingredient:
+    build: ../microservices/ms-ingredient/php
+    volumes:
+      - ../microservices/ms-ingredient/php/vhosts:/etc/apache2/sites-enabled
+      - ../microservices/ms-ingredient/:/var/www
+      - ../microservices/ms-ingredient/php/ssl:/etc/ssl
+    restart: always
+  
+  ms-modele:
+    build: ../microservices/ms-modele/php
+    volumes:
+      - ../microservices/ms-modele/php/vhosts:/etc/apache2/sites-enabled
+      - ../microservices/ms-modele/:/var/www
+      - ../microservices/ms-modele/php/ssl:/etc/ssl
+    restart: always
+  
+  ms-procede:
+    build: ../microservices/ms-procede/php
+    volumes:
+      - ../microservices/ms-procede/php/vhosts:/etc/apache2/sites-enabled
+      - ../microservices/ms-procede/:/var/www
+      - ../microservices/ms-procede/php/ssl:/etc/ssl
+    restart: always
