--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "ms-gateway"]
 	path = ms-gateway
 	url = git@github.com:Christophe-Ch/killerbee-api-gateway.git
+[submodule "front"]
+	path = front
+	url = git@github.com:MelineAmbrosini/killerbee-front.git
