--- a/main-reverse-proxy/traefik.yaml
+++ b/main-reverse-proxy/traefik.yaml
@@ -1,10 +1,7 @@
 entryPoints:
-  websecure:
-    address: :443
+  web:
+    address: :80
 
 providers:
   file:
     directory: /traefik/conf
-
-serversTransport:
-  insecureSkipVerify: true
