--- a/microservices/ms-ingredient/package.json
+++ b/microservices/ms-ingredient/package.json
@@ -4,17 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "nodemon --watch ./**/*.ts --exec ts-node src/index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.5",
+    "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "sequelize": "^6.6.5",
-    "tedious": "^12.2.0"
+    "jsonwebtoken": "^8.5.1",
+    "mssql": "^7.2.1",
+    "mysql": "^2.18.1",
+    "nestjs": "0.0.1",
+    "typeorm": "^0.2.38",
+    "typescript": "^4.4.4"
   }
 }
