--- a/microservices/ms-auth/package.json
+++ b/microservices/ms-auth/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon --watch ./**/*.ts --exec ts-node src/index.ts",
     "build": "tsc --project ./",
-    "start": "node dist/app.js"
+    "start": "node dist/index.js"
   },
   "author": "",
   "license": "ISC",
