--- a/main-reverse-proxy/conf/dynamic.yaml
+++ b/main-reverse-proxy/conf/dynamic.yaml
@@ -3,9 +3,11 @@ http:
     api:
       service: api-service
       rule: "Host(`api.killerbee.com`)"
+      tls: {}
     front:
       service: front-service
       rule: "Host(`killerbee.com`)"
+      tls: {}
 
   services:
     api-service:
@@ -16,3 +18,8 @@ http:
       loadBalancer:
         servers:
           - url: http://front
+
+tls:
+  certificates:
+    - certFile: /traefik/conf/ssl/reverse-proxy-certificate.crt
+      keyFile: /traefik/conf/ssl/reverse-proxy.key
